--- a/Sprint123/WebUI/Views/Home/Index.cshtml
+++ b/Sprint123/WebUI/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
 <body>
     <div>
         <p>Hello world!</p>
+        <a href="@Url.Action("UpcomingShows","UpcomingShow")">See upcoming movies!</a>
     </div>
 </body>
 
