Db setup complete added func to Item 1,2 & 3(still need refinements)

--- a/Sprint123/WebUI/Views/Home/Index.cshtml
+++ b/Sprint123/WebUI/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <body>
     <div>
         <p>Hello world!</p>
-        <a href="@Url.Action("UpcomingShows","UpcomingShow")">See upcoming movies!</a>
+        <p>@Html.ActionLink("See upcoming shows","Upcoming","UpcomingShow")</p>
     </div>
 </body>
 
