fixed AddPopcorn flow

--- a/Sprint123/WebUI/Views/UpcomingShow/Upcoming.cshtml
+++ b/Sprint123/WebUI/Views/UpcomingShow/Upcoming.cshtml
@@ -30,7 +30,7 @@
             <p>Zaal:</p>
         </th>
         <th>
-            <p>Aanvangtijd:</p>
+            <p>Aanvangstijd:</p>
         </th>
         <th>
             <p>Eindtijd:</p>
