--- a/Sprint123/WebUI/Views/Home/Index.cshtml
+++ b/Sprint123/WebUI/Views/Home/Index.cshtml
@@ -7,7 +7,8 @@
 <body>
     <div>
         <p>Hello world!</p>
-        <p>@Html.ActionLink("See upcoming shows","Upcoming","UpcomingShow")</p>
+        <p>@Html.ActionLink("See upcoming shows", "Upcoming", "UpcomingShow")</p> <br />
+        <p>@Html.ActionLink("Print out reservation tickets", "Reservation", "Reservation")</p>
     </div>
 </body>
 
