--- a/Sprint123/WebUI/Views/Summary/SummaryView.cshtml
+++ b/Sprint123/WebUI/Views/Summary/SummaryView.cshtml
@@ -1,8 +1,23 @@
 ﻿@model WebUI.Models.CinemaViewModel
+@model IEnumerable<Domain.Entities.Show>
 @using WebUI.Models
 @{
     ViewBag.Title = "SummaryView";
 }
 
+<html>
+<head>
+</head>
+<body>
+    <h2>Overzicht en stoelselectie</h2>
+    <div class="container">
+        <div class="row">
+        </div>
+    </div>
+</body>
+</html>
+
 <h2>SummaryView</h2>
+
+
 
