--- a/Sprint123/WebUI/Views/Reservation/DisplayReservation.cshtml
+++ b/Sprint123/WebUI/Views/Reservation/DisplayReservation.cshtml
@@ -13,7 +13,7 @@
             Deze film begint om @Html.DisplayFor(x => Model.First().Show.BeginTime.TimeOfDay)
             En eindigt om @Html.DisplayFor(x => Model.First().Show.EndTime.TimeOfDay)
         </p>
-        <table>
+        <table align="center">
             <tr>
                 <th scope="col">TicketID</th>
                 <th scope="col">Prijs</th>
