--- a/Sprint123/WebUI/Views/Home/Index.cshtml
+++ b/Sprint123/WebUI/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
             <button class="btn btn-success" type="button" onclick="location.href = '@Url.Action("Upcoming", "UpcomingShow")'">Alle shows voor vandaag bekijken</button>
         </p>
         <p>
-            <button class="btn btn-success" type="button" onclick="location.href = '@Url.Action("Reservation", "Reservation")'">Reservering ophallen</button>
+            <button class="btn btn-success" type="button" onclick="location.href = '@Url.Action("Reservation", "Reservation")'">Reservering ophalen</button>
         </p>
     </div>
 </body>
