--- a/Sprint123/WebUI/Views/Shared/_Layout.cshtml
+++ b/Sprint123/WebUI/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
     <!--Begin Avans nav bar-->
     <nav class="nav-avans">
         <div class="container">
-            @Html.ActionLink("Avans Cinema", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            <h2>Cinemapolis</h2>
             <ul class="global-links">
                 <li>
 
