--- a/Sprint123/WebUI/Views/UpcomingShow/Upcoming.cshtml
+++ b/Sprint123/WebUI/Views/UpcomingShow/Upcoming.cshtml
@@ -72,7 +72,7 @@
             <p>@ViewBag.endtime</p>
         </td>
         <td>
-            <a href=@ViewBag.showid>Bestel</a>
+            <a class="btn btn-info" href=@ViewBag.showid>Bestel</a>
         </td>
     </tr>
 @foreach (var item in Model) {
