secret movie is 2.50 cheaper

--- a/Sprint123/WebUI/Views/Ticket/OrderTickets.cshtml
+++ b/Sprint123/WebUI/Views/Ticket/OrderTickets.cshtml
@@ -20,7 +20,7 @@
             </tr>
             <tr>
                 <td>Standaard</td>
-                <td>@ViewBag.NormalPrice</td>
+                <td>€@ViewBag.NormalPrice</td>
                 <td>@Html.TextBox("normalTickets", 0, new { @type = "number", @min = "0" })</td>
             </tr>
             <tr>
