--- a/Sprint123/WebUI/Views/Ticket/OrderTickets.cshtml
+++ b/Sprint123/WebUI/Views/Ticket/OrderTickets.cshtml
@@ -25,17 +25,17 @@
             </tr>
             <tr>
                 <td>Kind</td>
-                <td>@ViewBag.ChildPrice</td>
+                <td>€@ViewBag.ChildPrice</td>
                 <td>@Html.TextBox("childTickets", 0, new { @type = "number", @min = "0" })</td>
             </tr>
             <tr>
                 <td>Student</td>
-                <td>@ViewBag.StudentPrice</td>
+                <td>€@ViewBag.StudentPrice</td>
                 <td>@Html.TextBox("studentTickets", 0, new { @type = "number", @min = "0" })</td>
             </tr>
             <tr>
                 <td>Senior</td>
-                <td>@ViewBag.SeniorPrice</td>
+                <td>€@ViewBag.SeniorPrice</td>
                 <td>@Html.TextBox("seniorTickets", 0, new { @type = "number", @min = "0" })</td>
             </tr>
         </table>
