added location, pin, markup changes, unittest, secret movie stays secret.

--- a/Sprint123/WebUI/Views/Confirmation/Confirm.cshtml
+++ b/Sprint123/WebUI/Views/Confirmation/Confirm.cshtml
@@ -4,4 +4,4 @@
 
 <h2>Confirm</h2>
 
-@Html.ActionLink("Betalen", "Payment", "Payment", null, null)
+@Html.ActionLink("Betalen", "Pay", "Pin", null, null)
