--- a/Sprint123/WebUI/Views/Ticket/OrderTickets.cshtml
+++ b/Sprint123/WebUI/Views/Ticket/OrderTickets.cshtml
@@ -9,7 +9,7 @@
             <h2>Je bestelt nu tickets voor @ViewBag.MovieName</h2><br />
             <p>Selecteer het aantal gewenste tickets.</p><br />
             <p>Let op: Voor het studententarief dient een geldige studentenpas getoont te worden bij de ingang!</p><br />
-        <input action="action" type="button" value="Terug naar vorige scherm" onclick="window.history.go(-1); return false;" />
+            <input action="action" class="btn btn-success" type="button" value="Terug naar vorige scherm" onclick="window.history.go(-1); return false;" />
         </p>
         @using (Html.BeginForm())
     {
