--- a/Sprint123/WebUI/Views/Reservation/DisplayReservation.cshtml
+++ b/Sprint123/WebUI/Views/Reservation/DisplayReservation.cshtml
@@ -8,13 +8,13 @@
     <div class="text-center">
         <br />
         <h2>Dit is jullie reservering!</h2><br />
-                                           <p>
-                                               Jullie hebben gereserveert voor <b>@Html.DisplayFor(x => Model.First().Show.Movie.Name)</b><br />
-                                               Op datum @Html.DisplayFor(x => Model.First().Show.BeginTime.DayOfWeek) @Html.DisplayFor(x => Model.First().Show.BeginTime.Day)-@Html.DisplayFor(x => Model.First().Show.BeginTime.Month)-@Html.DisplayFor(x => Model.First().Show.BeginTime.Year)<br />
-                                               Deze film begint om @Html.DisplayFor(x => Model.First().Show.BeginTime.TimeOfDay)<br />
-                                               En eindigt om @Html.DisplayFor(x => Model.First().Show.EndTime.TimeOfDay)<br />
-                                               De film draait in <b>zaal @Html.DisplayFor(x => Model.First().Show.Room.RoomNumber)</b>
-                                           </p>
+        <p>
+            Jullie hebben gereserveerd voor <b>@Html.DisplayFor(x => Model.First().Show.Movie.Name)</b><br />
+            Op datum @Html.DisplayFor(x => Model.First().Show.BeginTime.DayOfWeek) @Html.DisplayFor(x => Model.First().Show.BeginTime.Day)-@Html.DisplayFor(x => Model.First().Show.BeginTime.Month)-@Html.DisplayFor(x => Model.First().Show.BeginTime.Year)<br />
+            Deze film begint om @Html.DisplayFor(x => Model.First().Show.BeginTime.TimeOfDay)<br />
+            En eindigt om @Html.DisplayFor(x => Model.First().Show.EndTime.TimeOfDay)<br />
+            De film draait in <b>zaal @Html.DisplayFor(x => Model.First().Show.Room.RoomNumber)</b>
+        </p>
         <table align="center">
             <tr>
                 <th scope="col">TicketID</th>
@@ -44,9 +44,9 @@
             </tr>
     }
         </table>
-        <button class="btn btn-success" type="button" onclick="location.href = '@Url.Action("PrintTickets", "Reservation")'">Print je tickets!</button>
+        <button class="btn btn-success" type="button" onclick="location.href = '@Url.Action("PrintReservationTickets", "Reservation", Model)'">Print je tickets!</button>
 
-        <button class="btn btn-success" type="button" onclick="location.href = '@Url.Action("Index", "Home")'">Homepage</button>
+        <input action="action" class="btn btn-success" type="button" value="Terug naar vorige scherm" onclick="window.history.go(-1); return false;" />
     </div>
 </body>
 
