--- a/Sprint123/WebUI/Views/Shared/_Layout.cshtml
+++ b/Sprint123/WebUI/Views/Shared/_Layout.cshtml
@@ -9,6 +9,13 @@
     <link href="~/Content/footer-fixed.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/menu.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    @*<script src="~/Content/my-javascript.js"></script>*@
+    <script type="text/javascript">
+        function disableButton(btn) {
+            document.getElementById("oneclick").disabled = true;
+        }
+    </script>
 </head>
 <body>
     @*<div class="navbar navbar-inverse navbar-fixed-top">
